example work cycles

--- a/home/hw1/index.html
+++ b/home/hw1/index.html
@@ -8,5 +8,32 @@
 </head>
 <body>
     <h1>hw1asasasa</h1>
+
+    <script>
+
+    if ( speed<5 ) {
+        if ( gender=='М' )
+            console.log('пошёл');
+        else
+            console.log('пошла');
+    }
+    else {
+        if ( gender=='М' )
+            console.log('побежал');
+        else
+            console.log('побежала');
+    }
+
+    speed<5 
+        ? gender=='М' 
+            ? console.log('пошёл')
+            : console.log('пошла')
+        :  gender=='М'
+            ? console.log('побежал')
+            : console.log('побежала')
+
+
+            speed<5  || console.log('пошёл')    
+    </script>
 </body>
 </html>
