--- a/home/HashStorageFunc.html
+++ b/home/HashStorageFunc.html
@@ -7,38 +7,41 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" name='drinkName'> <br>
-    <input type="text" name='ingridients'> <br>
-    <input type="button" value="addDrink" onclick="addDrinkFunc()"><br>
 
+    <input type="text" id='name'>
+    <input type="checkbox" id="isAlco">
+    <button id="addDrink">add</button>
+   
     <script>
-
-        const drinkHash = new HashStorageFunc();
-
-        function addDrinkFunc(){
-            const drinkName = document.querySelector('[name="drinkName"]');
-            const ingridients = document.querySelector('[name="ingridients"]');
-
-            drinkHash.addDrink(drinkName.value, ingridients.value.split(','))
-        }
-
-        function HashStorageFunc(){
-            const drink = {
-                'b-52': {
-                    isAlco: true,
-                    ingridients: ['lemon', 'water', 'alco']
-                },
-                'moxito': {
-                    isAlco: false,
-                    ingridients: ['lemon', 'water', 'alco']
-                },
-            };
-
-            this.addDrink = function(name, ingr){
-                drink[name] = ingr;
+        class Drink{
+            constructor(){
+                this.drinks = [];
             }
+
+            add = (name, isAlco) =>{
+                this.drinks.push({
+                    name, 
+                    isAlco
+                })
+            }
+
+
         }
 
+        const addDrink = document.getElementById('addDrink');
+
+        const testDrink = new Drink();
+
+        addDrink.addEventListener('click', () => {
+            const name = prompt('name');
+            const isAlco = confirm('isAlco');
+
+           
+
+            testDrink.add(name, isAlco);
+        })
+
+       
     </script>
 </body>
 </html>
