--- a/home/timer/index.html
+++ b/home/timer/index.html
@@ -16,12 +16,18 @@
              height: 50px;
              background-color: blue;
          }
+         p::selection{
+             background-color: black;
+             color: chartreuse;
+         }
      </style>
 </head>
 <body>
     <div id="app"></div>
     <div id="app1"></div>
     <button id="stop">stop</button>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem reiciendis ducimus deleniti dignissimos, praesentium repellendus odio labore. Fuga eaque ducimus fugit sequi culpa provident sit! Architecto nam ipsum quidem repellendus!\</p>
 
     <script>
 
