Add sound and change theme(not done)

--- a/home/fetch/index.html
+++ b/home/fetch/index.html
@@ -19,8 +19,12 @@
     fetch(url, {
         method: 'POST',
         body: sp
-    }).then(res => res.json()).then(data => console.log('data', data))
+    }).then(res => res.json()).then(update)
 
+
+    function update(){
+
+    }
 </script>
 
 </body>
