begin react tamagochi

--- a/home/tamagochi/index.html
+++ b/home/tamagochi/index.html
@@ -131,7 +131,7 @@
                 pageHTML += renderSettingsScreen();
                 break;
             case '#game-page':
-                pageHTML += "<h3>Игра</h3>";
+                pageHTML += " ";
                 break;
             case '#exit-page':
                 pageHTML += "<h3>Выход</h3>";
